<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/r1telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:textColorHint="@color/negro"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/r1usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/r1telefono"
        android:layout_below="@+id/r1telefono"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textColorHint="@color/negro"
        android:textStyle="bold" />

    <requestFocus />

    <EditText
        android:id="@+id/r1nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/r1usuario"
        android:layout_below="@+id/r1usuario"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/nick"
        android:inputType="textPersonName"
        android:textColorHint="@color/negro"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/r1email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/r1nick"
        android:layout_below="@+id/r1nick"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/negro"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/r1pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/r1email"
        android:layout_below="@+id/r1email"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColorHint="@color/negro"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/r1repeatpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/r1pass"
        android:layout_below="@+id/r1pass"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/repeatpass"
        android:inputType="textPassword"
        android:textColorHint="@color/negro"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/r1siguiente"
        android:layout_marginTop="24dp"
        android:text="@string/r1"
        android:textColor="@color/navy"
        android:textColorHint="@color/navy"
        android:textStyle="italic" >
      
    </TextView>

    <Button
        android:id="@+id/r1siguiente"
        style="@style/button_login"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/r1repeatpass"
        android:layout_marginRight="14dp"
        android:background="@drawable/login_button"
        android:text="@string/siguiente" />

</RelativeLayout>